串行异步队列,解决复合list的图片上传的问题,bug调试解决ok

--- a/OpticalValleyUnite/Classes/UI/WorkOrder/ViewController/WorkOrder.storyboard
+++ b/OpticalValleyUnite/Classes/UI/WorkOrder/ViewController/WorkOrder.storyboard
@@ -27,10 +27,10 @@
                                 <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1gW-eA-Pc0">
-                                        <rect key="frame" x="83" y="0.0" width="83" height="44"/>
+                                        <rect key="frame" x="82.666666666666657" y="0.0" width="82.999999999999972" height="44"/>
                                         <subviews>
                                             <button opaque="NO" tag="10" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OCS-gl-Dvc">
-                                                <rect key="frame" x="21" y="8" width="40" height="28"/>
+                                                <rect key="frame" x="21" y="8" width="39.999999999999986" height="28"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 <state key="normal" title="待接收">
@@ -44,7 +44,7 @@
                                                 </connections>
                                             </button>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ofv-tJ-aXk">
-                                                <rect key="frame" x="82" y="12" width="1" height="20"/>
+                                                <rect key="frame" x="81.999999999999986" y="12" width="1" height="20"/>
                                                 <color key="backgroundColor" red="0.8901960784313725" green="0.8901960784313725" blue="0.89803921568627454" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="20" id="F09-Kv-sQ2"/>
@@ -61,10 +61,10 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lrD-jV-PHR">
-                                        <rect key="frame" x="166" y="0.0" width="82" height="44"/>
+                                        <rect key="frame" x="165.66666666666666" y="0.0" width="82.666666666666686" height="44"/>
                                         <subviews>
                                             <button opaque="NO" tag="10" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Isy-8B-gPL">
-                                                <rect key="frame" x="21" y="8" width="40" height="28"/>
+                                                <rect key="frame" x="21.333333333333343" y="8" width="40" height="28"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 <state key="normal" title="待执行">
@@ -78,7 +78,7 @@
                                                 </connections>
                                             </button>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mdf-bw-dMO">
-                                                <rect key="frame" x="81" y="12" width="1" height="20"/>
+                                                <rect key="frame" x="81.666666666666686" y="12" width="1" height="20"/>
                                                 <color key="backgroundColor" red="0.89019607840000003" green="0.89019607840000003" blue="0.8980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="20" id="kNx-Om-mzk"/>
@@ -95,10 +95,10 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mya-vp-wUo">
-                                        <rect key="frame" x="248" y="0.0" width="83" height="44"/>
+                                        <rect key="frame" x="248.33333333333331" y="0.0" width="82.999999999999943" height="44"/>
                                         <subviews>
                                             <button opaque="NO" tag="10" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aTG-DA-P5p">
-                                                <rect key="frame" x="22" y="8" width="40" height="28"/>
+                                                <rect key="frame" x="21.999999999999972" y="8" width="40" height="28"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 <state key="normal" title="待评价">
@@ -112,7 +112,7 @@
                                                 </connections>
                                             </button>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LGn-bO-ESQ">
-                                                <rect key="frame" x="82" y="12" width="1" height="20"/>
+                                                <rect key="frame" x="81.999999999999972" y="12" width="1" height="20"/>
                                                 <color key="backgroundColor" red="0.89019607840000003" green="0.89019607840000003" blue="0.8980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="20" id="s1w-iW-PTl"/>
@@ -129,10 +129,10 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sdb-mA-uXf">
-                                        <rect key="frame" x="331" y="0.0" width="83" height="44"/>
+                                        <rect key="frame" x="331.33333333333326" y="0.0" width="82.666666666666686" height="44"/>
                                         <subviews>
                                             <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JDX-dO-dVI">
-                                                <rect key="frame" x="22" y="8" width="40" height="28"/>
+                                                <rect key="frame" x="21.666666666666686" y="8" width="40" height="28"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 <state key="normal" title="已关闭">
@@ -146,7 +146,7 @@
                                                 </connections>
                                             </button>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3cJ-ci-tCu">
-                                                <rect key="frame" x="82" y="12" width="1" height="20"/>
+                                                <rect key="frame" x="81.666666666666686" y="12" width="1" height="20"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="1" id="3EN-Ay-MDz"/>
                                                     <constraint firstAttribute="height" constant="20" id="EnA-X6-OLj"/>
@@ -162,7 +162,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kgn-8A-ron">
-                                        <rect key="frame" x="0.0" y="0.0" width="83" height="44"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="82.666666666666671" height="44"/>
                                         <subviews>
                                             <button opaque="NO" tag="10" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n4M-Ty-3zF">
                                                 <rect key="frame" x="21" y="8" width="40" height="28"/>
@@ -179,7 +179,7 @@
                                                 </connections>
                                             </button>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sMP-55-JeX">
-                                                <rect key="frame" x="82" y="12" width="1" height="20"/>
+                                                <rect key="frame" x="81.666666666666671" y="12" width="1" height="20"/>
                                                 <color key="backgroundColor" red="0.8901960784313725" green="0.8901960784313725" blue="0.89803921568627454" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="1" id="DxX-kP-Z6g"/>
@@ -2908,13 +2908,17 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yoy-mP-cZS">
                                 <rect key="frame" x="0.0" y="850" width="414" height="50"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rSc-Ha-bB7">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rSc-Ha-bB7">
                                         <rect key="frame" x="30" y="7" width="162" height="36"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="36" id="yYM-fm-mR9"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <state key="normal" title="保存"/>
+                                        <state key="normal" title="保存">
+                                            <color key="titleColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <state key="selected" title="保存中...">
+                                            <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
                                                 <color key="value" red="0.19215686269999999" green="0.64705882349999999" blue="0.89019607840000003" alpha="1" colorSpace="calibratedRGB"/>
