--- a/OpticalValleyUnite/Classes/UI/WorkOrder/View/ExecutDetailCell.xib
+++ b/OpticalValleyUnite/Classes/UI/WorkOrder/View/ExecutDetailCell.xib
@@ -11,18 +11,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="164" id="KGk-i7-Jjw" customClass="ExecutDetailCell" customModule="OpticalValleyUnite" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="154"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="270" id="KGk-i7-Jjw" customClass="ExecutDetailCell" customModule="OpticalValleyUnite" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="260"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="154"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="259.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" bounces="NO" scrollEnabled="NO" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="leV-G1-6P1">
-                        <rect key="frame" x="40" y="37" width="280" height="117"/>
+                        <rect key="frame" x="40" y="74" width="280" height="125.5"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="60" id="89H-tv-TPB"/>
+                            <constraint firstAttribute="height" constant="125.5" id="UVU-GF-lGw"/>
                         </constraints>
                         <connections>
                             <outlet property="dataSource" destination="KGk-i7-Jjw" id="tGr-v1-1zY"/>
@@ -30,7 +30,7 @@
                         </connections>
                     </tableView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="已执行" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f8W-BA-EvH">
-                        <rect key="frame" x="52" y="8" width="43" height="18"/>
+                        <rect key="frame" x="50" y="8" width="43" height="18"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="18" id="tmD-aM-pMM"/>
                         </constraints>
@@ -39,7 +39,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="25h-RL-mWH">
-                        <rect key="frame" x="20" y="0.0" width="1" height="154"/>
+                        <rect key="frame" x="20" y="0.0" width="1" height="259.5"/>
                         <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="1" id="UFn-mv-hBY"/>
@@ -58,26 +58,39 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </imageView>
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="bao-FU-MlI" customClass="SJTextView">
+                        <rect key="frame" x="50" y="204.5" width="265" height="50"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="vxy-7d-bXw"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                    </textView>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="25h-RL-mWH" secondAttribute="bottom" id="2fS-aZ-Oir"/>
+                    <constraint firstAttribute="trailing" secondItem="bao-FU-MlI" secondAttribute="trailing" constant="5" id="4BJ-NP-j9o"/>
+                    <constraint firstItem="leV-G1-6P1" firstAttribute="top" secondItem="f8W-BA-EvH" secondAttribute="bottom" constant="5" id="9pE-OP-YbM"/>
+                    <constraint firstAttribute="bottom" secondItem="bao-FU-MlI" secondAttribute="bottom" constant="5" id="9zc-Fv-ujQ"/>
                     <constraint firstItem="leV-G1-6P1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="40" id="BcY-Ft-Hak"/>
                     <constraint firstItem="vq9-de-xoR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="25" id="DHc-JS-o6K"/>
-                    <constraint firstItem="leV-G1-6P1" firstAttribute="top" secondItem="f8W-BA-EvH" secondAttribute="bottom" constant="11" id="FWn-8S-5gB"/>
                     <constraint firstItem="25h-RL-mWH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="ISO-K5-jni"/>
+                    <constraint firstItem="bao-FU-MlI" firstAttribute="top" secondItem="leV-G1-6P1" secondAttribute="bottom" constant="5" id="LtT-3b-W9j"/>
                     <constraint firstItem="25h-RL-mWH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="SlX-MA-FRX"/>
-                    <constraint firstItem="f8W-BA-EvH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="52" id="Tou-WR-msv"/>
-                    <constraint firstAttribute="bottom" secondItem="leV-G1-6P1" secondAttribute="bottom" id="Y8R-cG-Soh"/>
+                    <constraint firstItem="f8W-BA-EvH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="50" id="Tou-WR-msv"/>
                     <constraint firstItem="vq9-de-xoR" firstAttribute="centerX" secondItem="25h-RL-mWH" secondAttribute="centerX" id="cdX-X8-hK2"/>
                     <constraint firstAttribute="trailing" secondItem="leV-G1-6P1" secondAttribute="trailing" id="iVl-mb-1VK"/>
                     <constraint firstItem="f8W-BA-EvH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="jsC-QH-JXe"/>
+                    <constraint firstItem="bao-FU-MlI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="50" id="z1J-Dj-KmY"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="remarkTextView" destination="bao-FU-MlI" id="zC8-oF-8Ss"/>
                 <outlet property="tableView" destination="leV-G1-6P1" id="Rx6-EX-5Yi"/>
-                <outlet property="tableViewHeightConstaint" destination="89H-tv-TPB" id="brG-wq-0fS"/>
+                <outlet property="tableViewHeightConstaint" destination="UVU-GF-lGw" id="r5E-qW-XQt"/>
             </connections>
-            <point key="canvasLocation" x="-125" y="26"/>
+            <point key="canvasLocation" x="-223" y="108"/>
         </tableViewCell>
     </objects>
 </document>
