--- a/OpticalValleyUnite/Classes/UI/WorkOrder/View/ExecutingSectionView.xib
+++ b/OpticalValleyUnite/Classes/UI/WorkOrder/View/ExecutingSectionView.xib
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ExecutingSectionView" customModule="OpticalValleyUnite" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="73"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="清洁一号楼" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I86-Wq-r0c">
-                    <rect key="frame" x="18" y="13" width="72" height="17"/>
+                    <rect key="frame" x="18" y="13" width="72" height="26"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <color key="textColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q5v-ke-iob">
-                    <rect key="frame" x="333" y="17" width="30" height="30"/>
+                    <rect key="frame" x="333" y="21.5" width="30" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="rFY-g8-oXv"/>
                         <constraint firstAttribute="width" constant="30" id="zdv-uZ-JTS"/>
@@ -37,14 +37,14 @@
                     </constraints>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="90t-uK-XSv">
-                    <rect key="frame" x="0.0" y="63" width="375" height="1"/>
+                    <rect key="frame" x="0.0" y="72" width="375" height="1"/>
                     <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.94117647059999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="tYG-Fz-L5C"/>
                     </constraints>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lvE-OI-JZa">
-                    <rect key="frame" x="18" y="34" width="40" height="30"/>
+                    <rect key="frame" x="18" y="43" width="40" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="40" id="XZV-S8-PKx"/>
                         <constraint firstAttribute="height" constant="30" id="jEf-rx-D09"/>
@@ -79,7 +79,7 @@
                 <outlet property="openBtn" destination="lvE-OI-JZa" id="jQB-ya-F7s"/>
                 <outlet property="titleLabel" destination="I86-Wq-r0c" id="Pur-oC-gwk"/>
             </connections>
-            <point key="canvasLocation" x="-55.5" y="123"/>
+            <point key="canvasLocation" x="-55.5" y="127.5"/>
         </view>
     </objects>
     <resources>
