报事模块->选择报事地点的逻辑bug解决,调试布局UI,回调报事地点数据重构

--- a/OpticalValleyUnite/Classes/UI/Home/ViewController/ReportMaster.storyboard
+++ b/OpticalValleyUnite/Classes/UI/Home/ViewController/ReportMaster.storyboard
@@ -1481,8 +1481,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1楼地下室" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ozm-Hl-NJa">
-                                                    <rect key="frame" x="14" y="13" width="68" height="18"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1楼地下室" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ozm-Hl-NJa">
+                                                    <rect key="frame" x="14" y="13" width="328" height="18"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <color key="textColor" red="0.18039215689999999" green="0.18039215689999999" blue="0.18039215689999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -1498,6 +1498,7 @@
                                             <constraints>
                                                 <constraint firstItem="Ozm-Hl-NJa" firstAttribute="leading" secondItem="GHJ-rH-IAg" secondAttribute="leading" constant="14" id="6eg-sC-CyZ"/>
                                                 <constraint firstItem="Ozm-Hl-NJa" firstAttribute="centerY" secondItem="GHJ-rH-IAg" secondAttribute="centerY" id="83y-Hp-sLl"/>
+                                                <constraint firstItem="xJ9-xa-Kdw" firstAttribute="leading" secondItem="Ozm-Hl-NJa" secondAttribute="trailing" constant="5" id="GI6-Iy-9lz"/>
                                                 <constraint firstItem="xJ9-xa-Kdw" firstAttribute="centerY" secondItem="GHJ-rH-IAg" secondAttribute="centerY" id="HZJ-rs-dvA"/>
                                                 <constraint firstAttribute="trailing" secondItem="xJ9-xa-Kdw" secondAttribute="trailing" constant="8" id="Zfo-3B-jFA"/>
                                             </constraints>
@@ -1513,14 +1514,14 @@
                                     <outlet property="delegate" destination="Kh0-Wq-4af" id="xdz-Rm-Zwa"/>
                                 </connections>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UdF-SY-dlM" userLabel="已到最后一级">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UdF-SY-dlM" userLabel="下一步界面跳转">
                                 <rect key="frame" x="0.0" y="667" width="375" height="0.0"/>
                                 <color key="backgroundColor" red="0.19215686269999999" green="0.64705882349999999" blue="0.89019607840000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" id="wLr-Tl-pA0"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                <state key="normal" title="已到最后一级">
+                                <state key="normal" title="下一步">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
@@ -1545,13 +1546,14 @@
                     <toolbarItems/>
                     <connections>
                         <outlet property="nextBtnHeightConstraint" destination="wLr-Tl-pA0" id="gP2-hu-Plv"/>
+                        <outlet property="nextButton" destination="UdF-SY-dlM" id="x7h-Fk-DLh"/>
                         <outlet property="tableView" destination="aGe-aF-E8j" id="cMR-fE-jRn"/>
                         <outlet property="topView" destination="OMn-FF-5KU" id="Gvt-aZ-3qA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GQ0-pW-vZU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="657" y="1113"/>
+            <point key="canvasLocation" x="439" y="1079"/>
         </scene>
         <!--工单-->
         <scene sceneID="e1q-jX-QtL">
